# workout_api

./: Makefile  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: b7a330a99df3_init_db.py
workout_api/: routers.py
workout_api/atleta/: controller.py  models.py  schemas.py
workout_api/categorias/: controller.py  models.py  schemas.py
workout_api/centro_treinamento/: controller.py  models.py  schemas.py
workout_api/contrib/: dependencies.py  models.py  schemas.py
