[tool.poetry]
name = "workout-api"
version = "0.1.0"
description = ""
authors = ["Claudino Neto <115763601+Zeromil2@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
SQLAlchemy = "^2.0.31"
pydantic = "^2.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
